--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sonner",
-  "version": "1.5.0",
+  "name": "@vertisanpro/sonner",
+  "version": "1.5.0-v1",
   "description": "An opinionated toast component for React.",
   "exports": {
     "types": "./dist/index.d.ts",
